--- a/style.css
+++ b/style.css
@@ -572,10 +572,10 @@ input[type="submit"] {
   font-size: 1rem;
   font-family: museo-sans-rounded, "Museo Sans Rounded", sans-serif;
   font-weight: 400;
-  line-height: 1;
-  padding: 0.7rem 2rem;
+  line-height: 1.2;
+  padding: 0.7rem 2rem 0.6rem;
   text-decoration: none;
-  text-shadow: 1px 1px #f9f0cc;
+  text-shadow: 1px 1px rgba(249, 240, 204, 0.5);
   transition: all ease-in-out 50ms; }
   button:hover,
   .button:hover,
